# portfolio-news-monitoring-agent

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: config.py  main.py
data/: yahoo_finance.py
database/: dummy_tickers.py
models/: schemas.py
notebooks/: model_training.ipynb  news_parsing.ipynb
services/: chat.py  news_fetcher.py  summarizer.py
