[project]
name = "testproject"
version = "0.1.0"
description = ""
authors = [
    {name = "MulhamShaheen",email = "mulhamshaheen.ms@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets (>=3.6.0,<4.0.0)",
    "transformers (>=4.53.0,<5.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "yahoo-fin (>=0.8.9.1,<0.9.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
